@startuml
class UserAccount {
  +Long id
  +String email
  +String password
  +Role role
}

class Student {
  +Long id
  +String fullName
  +String universityRollNo
  +String branch
  +Double cgpa
  +String skills
  +String resumeUrl
  +PlacementStatus placementStatus
}

class Company {
  +Long id
  +String companyName
  +String email
  +String website
  +boolean approved
}

class PlacementDrive {
  +Long id
  +String title
  +String description
  +String eligibleBranch
  +Double minimumCgpa
  +String location
  +LocalDate driveDate
  +DriveStatus status
}

class Application {
  +Long id
  +ApplicationStatus status
  +LocalDateTime appliedAt
  +LocalDateTime interviewAt
}

UserAccount "1" -- "1" Student
UserAccount "1" -- "1" Company
Company "1" -- "*" PlacementDrive
Student "1" -- "*" Application
PlacementDrive "1" -- "*" Application
@enduml
